added license and readme

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 description = "A Python API client for US EPA's Computational Toxicology and Exposure APIs."
 authors = ["kaphillips <phillips.katherine@epa.gov>"]
 readme = "README.md"
+license = "GPL-3.0-or-later"
 
 [tool.poetry.dependencies]
 python = "^3.10"
