final changes for alpha release to pip

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,19 +1,25 @@
 [tool.poetry]
 name = "ctxpy"
-version = "0.1.0"
+version = "0.0.1-alpha.1"
 description = "A Python API client for US EPA's Computational Toxicology and Exposure APIs."
-authors = ["kaphillips <phillips.katherine@epa.gov>"]
+authors = ["Katherine Phillips <phillips.katherine@epa.gov>"]
 readme = "README.md"
 license = "GPL-3.0-or-later"
+classifiers = [
+    "Development Status :: 2 - Pre-Alpha",
+    "Intended Audience :: Science/Research",
+    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
+    "Natural Language :: English",
+    "Operating System :: OS Independent",
+    "Programming Language :: Python :: 3.10",
+    "Topic :: Scientific/Engineering :: Chemistry"
+]
 
 [tool.poetry.dependencies]
 python = "^3.10"
-tqdm = "^4.66.1"
 pandas = "^2.1.4"
-numpy = "^1.26.3"
-tomli = "^2.0.1"
 requests = "^2.31.0"
-toml = "^0.10.2"
+python-dotenv = "^1.0.1"
 
 
 [build-system]
@@ -21,6 +27,6 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
-ccte_init = "ctxpy.command_line:main"
+ctx_init = "ctxpy.command_line:main"
 
 [tool.ruff]
