--- a/.github/test-pypi-deployment.yml
+++ b/.github/test-pypi-deployment.yml
@@ -10,17 +10,23 @@ on:
     branches: [ "pypi-test-auto-integration2" ]
 
 jobs:
-  build-push:
+  deploy-package:
 
     runs-on: ubuntu-latest
     environment: ${{ github.head_ref || github.ref_name }}
     permissions:
       contents: read
       packages: write
-      # This is used to complete the identity challenge
-      # with sigstore/fulcio when running outside of PRs.
       id-token: write
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+
+      - name: Build and publish to pypi
+        uses: JRubics/poetry-publish@v2.0
+        with:
+          pypi_token: ${{ secrets.TEST_PYPI_TOKEN }}
+          poetry_install_options: "--sync --no-root"
+          poetry_publish_options: "--dry-run"
+          repository_name: "test-pypi"
