--- a/.github/workflows/test-pypi-deployment.yml
+++ b/.github/workflows/test-pypi-deployment.yml
@@ -22,3 +22,4 @@ jobs:
         with:
           pypi_token: ${{ secrets.TEST_PYPI_TOKEN }}
           repository_name: "test-pypi"
+          repository_url: "https://test.pypi.org/legacy/"
