Changing trigger branch to staging

--- a/.github/workflows/test-pypi-deployment.yml
+++ b/.github/workflows/test-pypi-deployment.yml
@@ -7,7 +7,7 @@ name: poetry-test-deploy
 
 on:
   push:
-    branches: [ "pypi-test-auto-integration" ]
+    branches: [ "staging" ]
 
 jobs:
   deploy-package:
