--- a/.github/workflows/pypi-deployment.yml
+++ b/.github/workflows/pypi-deployment.yml
@@ -22,4 +22,4 @@ jobs:
         with:
           pypi_token: ${{ secrets.PYPI_TOKEN }}
           repository_name: "pypi"
-          repository_url: "https://pypi.org/"
+          repository_url: "https://pypi.org/pypi"
