--- a/.github/workflows/uv-release.yml
+++ b/.github/workflows/uv-release.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   pypi:
-    name: Publish to PyPI
+    name: Publish package to PyPI
     runs-on: ubuntu-latest
     # Environment and permissions trusted publishing.
     environment:
